--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="btnHome">リストへ</string>
     <string name="title_activity_disp02">Disp02</string>
     <string name="btnDelete">削除</string>
+    <string name="btnAdd">追加</string>
+    <string name="btnWarpDisp08">Disp08へ</string>
 </resources>
