--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="btnDone">変更</string>
     <string name="btnWarpDisp07">Disp07へ</string>
     <string name="btnHome">リストへ</string>
-    <string name="title_activity_disp02">Disp02</string>
+    <string name="title_activity_disp02">自発語帳</string>
     <string name="btnDelete">削除</string>
     <string name="btnAdd">追加</string>
     <string name="btnWarpDisp08">Disp08へ</string>
